# spug_20241119

./: .gitignore  README.md  pyproject.toml
src/: _logparse.py  cli.py  logparse.py
