[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "build",
    "setuptools >= 67.7.2",
	"setuptools_scm >= 7.1",
	"wheel >= 0.40.0"
]

[project]
name = "logparse"
version = "0.0.6"
description = "A command-line tool for parsing log files"
authors = [
    { name = "David Slusser", email = "dbslusser@gmail.com" }
]
license = { file = "LICENSE" }
dependencies = []

[project.urls]
homepage = "https://github.com/davidslusser/spug_20241119"
repository = "https://github.com/davidslusser/spug_20241119"


[project.scripts]
logparse = "logparse:main"
